--- a/mb_rescorla_wagner/README
+++ b/mb_rescorla_wagner/README
@@ -2,7 +2,7 @@ This folder contains all code needed to produce the simulation results and the d
 Bennett JEM, Philippides A, Nowotny T (2019), Learning with reward prediction errors in a model of the Drosophila mushroom body, 
 JOURNAL VOL, PAGES
 
-Contents:
+Code Contents:
  - mb_vs.m: code to run multiple alternative forced choice simulations using the VS/VSlambda model
  - mb_mv_a.m: code to run multiple alternative forced choice simulations using the MV model with overlapping cue representations.
  - mb_mv_b.m: code to run multiple alternative forced choice simulations using the MV model with overlapping cue representations, in order 
@@ -15,6 +15,11 @@ Contents:
  - mb_reward_schedules.m: code to generate a specific and parameterised reward schedule for use in the simulations
  - mb_vs_mv_analysis.m: code to run all data generation and data analysis.
  - utils/: a folder containing variety of MATLAB functions, some of which are called on for e.g. filtering.
+ 
+Data Contents:
+ - associative_conditioning_data_for_VS_model.mat: simulated VS_lambda model data for Fig. 5 (used for analyses in mb_vs_mv_analysis.m under flag==8)
+ - associative_conditioning_data_for_MV_model.mat: simulated MV model data for Fig. 5 (used for analyses in mb_vs_mv_analysis.m under flag==8) 
+ - associative_conditioning_intervention_data.xlsx: collated performance indeces and test statistics for all experimental data used in the study.
  
 Dependencies:
  - All code has been tested using either MATLAB R2012a on OS X 10.7, or MATLAB R2018b on Ubuntu 18.04 LTS. Certain subroutines in 
@@ -29,6 +34,9 @@ Example usage:
  -  mb_vs_mv_analysis.m is divided into subroutines, labelled by the variable ‘flag’. To run, for example, subroutine 2 (produces 
  Fig. 2a-d in the paper), open MATLAB and run:
 mb_vs_mv_analysis(2);
+ - mb_vs_mv_analysis(8); generates MV model data for Fig. 5.
+ - mb_vs_mv_analysis(9); generates VS_lambdamodel data for Fig. 5. 
+ - mb_vs_mv_analysis(10); analyses the data generated under flag==8 and flag==9 (also provided in the .mat files in this repo) and produces Fig. 5.
  - A single run of, for example, the VS model (mb_vs.m) takes less than a second (using the reward schedules outlined in the paper). Some 
  of the more heavy analyses, such as subroutine 8 (generating performance indices for all 96 types of intervention in the associative 
  conditioning simulations) can take a few hours, depending on the specs of your computer. 
